--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "ruuls"
-version = "0.1.0"
 authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
 license = "MIT/Apache-2.0"
+name    = "ruuls"
+version = "0.1.0"
 
 [features]
 default = []
-serde_support = ["serde", "serde_derive"]
 
 [dependencies]
-serde = { version = "*", optional = true }
-serde_derive = { version = "*", optional = true }
+serde = { version = "1.0.117", features = ["derive"], optional = true }
